--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+<!-- Password Criteria Modal -->
     <div class= "modal" id="myModal">
       <div class= "modal-content">
         <span class="close">
@@ -29,6 +30,8 @@
         </form>
       </div>
     </div>
+<!-- End Modal -->
+<!-- Main Page Content -->
     <div class="wrapper">
       <header>
         <h1>Password Generator</h1>
@@ -50,6 +53,7 @@
         </div>
       </div>
     </div>
+<!-- End Page Content -->
     <script src="script.js"></script>
   </body>
 </html>
